--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@auth0/auth0-angular": "^2.1.0",
     "material": "^0.5.3",
     "ngx-mat-menu": "^1.2.7",
     "rxjs": "~7.8.0",
