--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "@auth0/auth0-angular": "^2.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^14.1.0",
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.2.3",
     "material": "^0.5.3",
+    "ngx-bootstrap": "^10.2.0",
     "ngx-mat-menu": "^1.2.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -33,6 +37,7 @@
     "@angular-devkit/build-angular": "^15.2.7",
     "@angular/cli": "~15.2.7",
     "@angular/compiler-cli": "^15.2.0",
+    "@angular/localize": "^15.2.0",
     "@types/jasmine": "~4.3.0",
     "@types/uuid": "^9.0.1",
     "jasmine-core": "~4.5.0",
