--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/core": "^15.2.0",
     "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^15.2.0",
+    "@angular/google-maps": "^16.0.3",
     "@angular/material": "^15.2.8",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
@@ -25,6 +26,7 @@
     "@ng-bootstrap/ng-bootstrap": "^14.1.0",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.5",
     "material": "^0.5.3",
     "ngx-bootstrap": "^10.2.0",
     "ngx-mat-menu": "^1.2.7",
@@ -38,6 +40,7 @@
     "@angular/cli": "~15.2.7",
     "@angular/compiler-cli": "^15.2.0",
     "@angular/localize": "^15.2.0",
+    "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "~4.3.0",
     "@types/uuid": "^9.0.1",
     "jasmine-core": "~4.5.0",
