--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^3.0.0-beta.0",
     "@angular/animations": "^15.2.0",
     "@angular/cdk": "^15.2.8",
     "@angular/common": "^15.2.0",
@@ -25,6 +26,7 @@
     "@auth0/auth0-angular": "^2.1.0",
     "@ng-bootstrap/ng-bootstrap": "^14.1.0",
     "@popperjs/core": "^2.11.6",
+    "@types/google.maps": "^3.53.4",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.5",
     "material": "^0.5.3",
